---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var b : boolean\nvar r : real\n\nvar _e00 : int := b\nvar _e01 : int := r\n"
---
"b"@"src/main.t:4..5" [ConstVar(Var, No)]: boolean
"r"@"src/main.t:20..21" [ConstVar(Var, No)]: real
"_e00"@"src/main.t:34..38" [ConstVar(Var, No)]: int
"_e01"@"src/main.t:54..58" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:48..49: mismatched types
| note for src/main.t:48..49: this is of type `boolean`
| note for src/main.t:41..44: this is of type `int`
| info: `boolean` is not assignable into `int`
error at src/main.t:68..69: mismatched types
| note for src/main.t:68..69: this is of type `real`
| note for src/main.t:61..64: this is of type `int`
| info: `real` is not assignable into `int`
